--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 
 header { 
-   background-color: hsl(273, 42%, 37%);
+   background-color: rgba(0,0,0,0.8);
    padding: 15px;
    text-align: center;
    border-bottom:4px solid #000000;
@@ -56,7 +56,7 @@ h1{align-items: 50px top;
    text-align: ;
    color: #eee;
 font-family: 10px 'Sarala', sans-serif;
-background-color: hsl(273, 42%, 37%);
+background-color: rgba(0,0,0,0.8);
 font-size: 100%;
 }
 
@@ -75,12 +75,11 @@ a{
 }
 
 body{
-   background-color: #9f9ea1;
-   flex-direction:50px row;
+   background-image: linear-gradient(to right, rgb(20,147,220), rgb(17,54,71));
    margin:0;
-    padding:20;
-    box-sizing:0;
+    
     text-decoration:0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .corpo {
@@ -103,10 +102,15 @@ width: 300px;
    float: left;
    width: 300px;
    border-bottom: #000000;
+   image-rendering: crisp-edges;
+   margin: -20px;
 }
 
 
 
-
-
-
+.box{
+   background-color: rgba(0,0,0,0.8);
+   padding: 15px;
+   border-radius: 15px;
+   width: 70%;
+}
